--- a/Tekku/src/main/resources/application.properties
+++ b/Tekku/src/main/resources/application.properties
@@ -1,10 +1,11 @@
 # Server
-server.port=8080
+server.port=${SERVER_PORT}
 
 # MySQL Database
-spring.datasource.url=jdbc:mysql://localhost:3306/vue_spring_db?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://${DB_HOST}:${DB_PORT}/${DB_NAME}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # JPA
 spring.jpa.hibernate.ddl-auto=update
@@ -13,3 +14,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # CORS
 cors.allowed-origins=http://localhost:5173
+cors.allowed-origin=${ALLOWED_ORIGIN}
+jwt.secret=${JWT_SECRET}
+jwt.expiration=${JWT_EXPIRATION}
+
